ZMO-649: fix ad code
Finally we see a mobile banner after months of development. And it looks weird. Fix that.

--- a/sass/modules/_adplaces.sass
+++ b/sass/modules/_adplaces.sass
@@ -13,6 +13,11 @@
 %ad__inner
     margin: 0 auto
 
+// mobile
+.iqd_mobile__adplace
+    width: 320px
+    margin: 0 auto
+
 
 // medium rectangles
 %ad__mr
